# zarc

./: .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
js/: Cargo.toml  build.mjs  package.json  pnpm-lock.yaml
js/src/html/: index.html
js/src/ts/: index.ts
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
zarc/tests/: test_all.py
