[package]
name = "zarc_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "zarc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zarc = { path = "./rust", version = "*" }
pyo3 = { version = "0.27.1", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[profile.test.junit]
path = "junit.xml"

[workspace]
members = [
    "js",
    "rust",
]
